RDGE-00007 RDGE-00008 RDGE-00010 Logger refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ include_directories (${OPENGL_INCLUDE_DIR})
 # project includes
 include_directories (include)
 include_directories (internal)
+include_directories (lib)
 
 add_library (
              RDGE SHARED
