RDGE-00049 Implement SpriteSheet

--- a/examples/glpong/CMakeLists.txt
+++ b/examples/glpong/CMakeLists.txt
@@ -38,6 +38,7 @@ add_executable (
                 src/main.cpp
                 src/glpong.cpp
                 src/scenes/introscene.cpp
+                src/scenes/chronoscene.cpp
                )
 
 target_link_libraries (
