--- a/tutorials/01_hello_rect/CMakeLists.txt
+++ b/tutorials/01_hello_rect/CMakeLists.txt
@@ -22,31 +22,14 @@ elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
     endif ()
 endif ()
 
-find_package (SDL2 REQUIRED)
-find_package (GLEW REQUIRED)
-#find_package (OpenGL REQUIRED)
-
-
-include_directories (${SDL2_INCLUDE_DIR})
-#include_directories (${GLEW_INCLUDE_DIRS})
-include_directories (${OPENGL_INCLUDE_DIR})
-
-
 link_directories (${RDGE_BINARY_DIR}/lib)
 include_directories (${RDGE_INCLUDE_DIR})
 
 add_executable (01_hello_rect
                 src/main.cpp)
 
-target_link_libraries (ex01_triangle
-                       ${SDL2_LIBRARY}
-                       #${GLEW_LIBRARIES}
-                       ${OPENGL_LIBRARIES}
+target_link_libraries (01_hello_rect
                        RDGE)
-
-#add_custom_command(TARGET ex01_triangle PRE_BUILD
-                   #COMMAND ${CMAKE_COMMAND} -E copy_directory
-                   #${PROJECT_SOURCE_DIR}/res $<TARGET_FILE_DIR:ex01_triangle>)
 
 # TODO : Implement install
 #install(TARGETS ex01_triangle RUNTIME DESTINATION ${BIN_DIR})
