Add game/scene tutorial

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,7 @@ target_link_libraries (RDGE
 add_subdirectory (tutorials/01_textures)
 add_subdirectory (tutorials/02_layers)
 add_subdirectory (tutorials/03_spritesheet)
+add_subdirectory (tutorials/04_scenes)
 
 # deprecated
 #add_subdirectory (tutorials/opengl/ex01_triangle)
