Reorganized sandbox project

--- a/tutorials/sandbox/CMakeLists.txt
+++ b/tutorials/sandbox/CMakeLists.txt
@@ -27,7 +27,8 @@ include_directories (${RDGE_INCLUDE_DIR})
 
 add_executable (sandbox
                 src/main.cpp
-                src/scenes/test.cpp)
+                src/scenes/test.cpp
+                src/scenes/entities/player.cpp)
 
 target_link_libraries (sandbox
                        RDGE)
