Added primitive collision detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,7 +134,8 @@ add_executable (rdge_test
                 tests/main.cpp
                 tests/assets/spritesheet.cpp
                 tests/graphics/color.cpp
-                tests/math/functions.cpp)
+                tests/graphics/rect.cpp
+                tests/math/intrinsics.cpp)
 target_link_libraries (rdge_test
                        RDGE
                        ${GTEST_BOTH_LIBRARIES})
