physics updates & freelist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,7 @@ add_executable (rdge_test
                 tests/physics/circle_test.cpp
                 tests/physics/polygon_test.cpp
                 tests/math/intrinsics_test.cpp
+                tests/util/dynamic_freelist_test.cpp
                 tests/util/nodeless_list_test.cpp
                 tests/util/nodeless_forward_list_test.cpp)
 target_link_libraries (rdge_test
