physics bug fixes and updates

--- a/sandbox/physics/CMakeLists.txt
+++ b/sandbox/physics/CMakeLists.txt
@@ -13,7 +13,9 @@ include_directories (${RDGE_INCLUDE_DIR})
 
 add_executable (physics
                 src/main.cpp
-                src/scenes/test.cpp)
+                src/scenes/test.cpp
+                src/scenes/tiles.cpp
+                src/scenes/tumbler.cpp)
 
 target_link_libraries (physics
                        RDGE)
