--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ext/imgui"]
 	path = ext/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "ext/tinyheaders"]
+	path = ext/tinyheaders
+	url = https://github.com/RandyGaul/tinyheaders.git
