--- a/tools/asset_packer/CMakeLists.txt
+++ b/tools/asset_packer/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 3.4)
-project (chrono)
+project (asset_packer)
 
 message (STATUS "== Configuring sandbox: ${PROJECT_NAME} ==")
 message (STATUS "RDGE lib dir: ${RDGE_BINARY_DIR}/lib")
@@ -11,19 +11,15 @@ message (STATUS "RDGE include dir: ${RDGE_SOURCE_DIR}/include")
 link_directories (${RDGE_BINARY_DIR}/lib)
 include_directories (${RDGE_INCLUDE_DIR})
 
-add_executable (chrono
-                src/main.cpp
-                src/scenes/test.cpp
-                src/scenes/entities/duck.cpp
-                src/scenes/entities/player.cpp)
+add_executable (asset_packer
+                src/main.cpp)
 
-target_link_libraries (chrono
+target_link_libraries (asset_packer
                        RDGE)
 
-# TODO : Disabling for asset packing
-#add_custom_command(TARGET chrono PRE_BUILD
+#add_custom_command(TARGET physics PRE_BUILD
                    #COMMAND ${CMAKE_COMMAND} -E copy_directory
-                   #${PROJECT_SOURCE_DIR}/res $<TARGET_FILE_DIR:chrono>/res)
+                   #${PROJECT_SOURCE_DIR}/res $<TARGET_FILE_DIR:physics>/res)
 
 # TODO : Implement install
-#install(TARGETS chrono RUNTIME DESTINATION ${BIN_DIR})
+#install(TARGETS physics RUNTIME DESTINATION ${BIN_DIR})
